<resources>
    <string name="status_alive">Alive</string>
    <string name="status_dead">Dead</string>
    <string name="status_unknown">Unknown</string>
    <string name="portrait_loading">Loading portrait</string>
    <string name="portrait_unavailable">Portrait unavailable</string>
    <string name="character_loading">Loading character</string>
    <string name="catalogue_error">Couldn\'t load characters</string>
    <string name="catalogue_error_description">Something went wrong. Please try again.</string>
    <string name="retry">Retry</string>
    <string name="retry_loading_characters">Retry loading characters</string>
    <string name="retry_loading_more_characters">Retry loading more characters</string>
    <string name="open_character_details">Open details for %1$s</string>
    <string name="catalogue_empty">No characters available.</string>
    <string name="catalogue_empty_description">The character catalogue is currently empty.</string>
    <string name="catalogue_append_loading">Loading more characters</string>
    <string name="catalogue_append_error">Couldn\'t load more characters</string>
    <string name="catalogue_loaded_count">Loaded %1$d of %2$d characters</string>
    <string name="search_characters">Search characters</string>
    <string name="clear_search">Clear search</string>
    <string name="catalogue_no_matches">No characters found</string>
    <string name="catalogue_no_matches_description">Try another name or status.</string>
    <string name="suggest_rick" translatable="false">Rick</string>
    <string name="suggest_morty" translatable="false">Morty</string>
    <string name="suggest_beth" translatable="false">Beth</string>
    <string name="suggest_summer" translatable="false">Summer</string>
    <string name="status_all">All</string>
</resources>
